@startuml
!include style.puml
hide members
skinparam arrowThickness 1.1
skinparam arrowColor UI_COLOR_4
skinparam classBackgroundColor UI_COLOR_2
skinparam nodesep 50
skinparam ranksep 50

Class HiddenOutside #FFFFFF

package UI <<Rectangle>> {
    Class "<<interface>>\nUi" as Ui
    class MainWindow
    class Header
    class ExpenseListPanel
    class ExpenseCard
    class BalancePanel
    class BalanceCard
    class PieChart
    class InsightsWindow
    class StatusBar
    class ResultDisplay
    class CommandBox
    class HelpWindow
}

package Logic <<Rectangle>> {
    Class HiddenLogic #FFFFFF
}

package Model <<Rectangle>> {
    Class HiddenModel #FFFFFF
}

Class CommandExecutor #FFFFFF

HiddenOutside .down.> Ui

Ui <|.. MainWindow

MainWindow *-down-> "1" Header
MainWindow *-down-> "1" ExpenseListPanel
MainWindow *-down-> "1" BalancePanel
MainWindow *-down-> "1" PieChart
MainWindow *-down-> "1" StatusBar
MainWindow *-down-> "1" ResultDisplay
MainWindow *-down-> "1" CommandBox
MainWindow *-down-> "0..1" HelpWindow
MainWindow *-down-> "0..1" InsightsWindow

ExpenseListPanel *-down-> "*" ExpenseCard
BalancePanel *-down-> "*" BalanceCard

MainWindow -down-> Logic

ExpenseListPanel ..> Model
ExpenseCard ..> Model
PieChart ..> Model
StatusBar ..> Model
InsightsWindow ..> Model
BalancePanel ..> Model
BalanceCard ..> Model

CommandBox ..> CommandExecutor

UI -[hidden]--> Model
@enduml